After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 62030 - 72.06 - crash when changing the color of a sheet object widget
72.06 - crash when changing the color of a sheet object widget
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: Sheet Objects
0.x
Other All
: Normal critical
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2001-10-10 02:51 UTC by Chema Celorio
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Chema Celorio 2001-10-10 03:57:02 UTC
Package: Gnumeric
Severity: critical
Version: CVS
Synopsis: 72.06 - crash when changing the color of a sheet object widget
Bugzilla-Product: Gnumeric
Bugzilla-Component: Sheet Objects

Description:
started out with :
http://www.gnome.org/~chema/bug_072_05.gnumeric
Created a rectangle, and tried changing the fill color. First i changed
the color to blue, then changed it to transparent when gnumeric
crashed.



Debugging Information:

[New Thread 1024 (LWP 19903)]
0x406f5869 in __wait4 () from /lib/libc.so.6

Thread 1 (Thread 1024 (LWP 19903))

  • #0 __wait4
    from /lib/libc.so.6
  • #1 __DTOR_END__
    from /lib/libc.so.6
  • #2 gnome_segv_handle
    at gnome-init.c line 659
  • #3 <signal handler called>
  • #4 cb_dialog_filled_clicked
    at sheet-object-graphic.c line 800
  • #5 gnome_dialog_marshal_signal_1
    at gnome-dialog.c line 145
  • #6 gtk_handlers_run
    at gtksignal.c line 1917
  • #7 gtk_signal_real_emit
    at gtksignal.c line 1477
  • #8 gtk_signal_emit
    at gtksignal.c line 552
  • #9 gnome_dialog_button_clicked
    at gnome-dialog.c line 1014
  • #10 gtk_marshal_NONE__NONE
    at gtkmarshal.c line 312
  • #11 gtk_handlers_run
    at gtksignal.c line 1917
  • #12 gtk_signal_real_emit
    at gtksignal.c line 1516
  • #13 gtk_signal_emit
    at gtksignal.c line 552
  • #14 gtk_button_clicked
    at gtkbutton.c line 336
  • #15 gtk_real_button_released
    at gtkbutton.c line 861
  • #16 gtk_marshal_NONE__NONE
    at gtkmarshal.c line 312
  • #17 gtk_signal_real_emit
    at gtksignal.c line 1440
  • #18 gtk_signal_emit
    at gtksignal.c line 552
  • #19 gtk_button_released
    at gtkbutton.c line 327
  • #20 gtk_button_button_release
    at gtkbutton.c line 721
  • #21 gtk_marshal_BOOL__POINTER
    at gtkmarshal.c line 28
  • #22 gtk_signal_real_emit
    at gtksignal.c line 1492
  • #23 gtk_signal_emit
    at gtksignal.c line 552
  • #24 gtk_widget_event
    at gtkwidget.c line 2864
  • #25 gtk_propagate_event
    at gtkmain.c line 1378
  • #26 gtk_main_do_event
    at gtkmain.c line 818
  • #27 gdk_event_dispatch
    at gdkevents.c line 2139
  • #28 g_main_dispatch
    at gmain.c line 656
  • #29 g_main_iterate
    at gmain.c line 877
  • #30 g_main_run
    at gmain.c line 935
  • #31 gtk_main
    at gtkmain.c line 524
  • #32 main
    at main.c line 281
  • #33 __libc_start_main
    at ../sysdeps/generic/libc-start.c line 129
  • #0 __wait4
    from /lib/libc.so.6
  • #0 __wait4
    from /lib/libc.so.6
  • #1 __DTOR_END__
    from /lib/libc.so.6
  • #2 gnome_segv_handle
    at gnome-init.c line 659
  • #3 <signal handler called>
  • #4 cb_dialog_filled_clicked
    at sheet-object-graphic.c line 800
  • #5 gnome_dialog_marshal_signal_1
    at gnome-dialog.c line 145
  • #6 gtk_handlers_run
    at gtksignal.c line 1917
  • #7 gtk_signal_real_emit
    at gtksignal.c line 1477




------- Bug moved to this database by unknown@bugzilla.gnome.org 2001-10-09 23:57 -------

Reassigning to the default owner of the component, jgoldberg@home.com.

Comment 1 Jody Goldberg 2001-10-10 04:21:02 UTC
Doh!  I forgot transparent...